@@ -1,3 +1,6 @@
+2017-04-03 Peter Onyisi <ponyisi@cern.ch>
+	* Add min OS Mll variables for 4l
+
 2017-02-23 Robert Wolff <robert.wolff@cern.ch>
 	* add preliminary ttbar-ttbar+gamma OLR ATLASTTHML-86
 	* add Dilepton Filter Classification (for dilep filtered ttbar)
